--- a/src/component/Atoms/Document/Document.scss
+++ b/src/component/Atoms/Document/Document.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex: 2;
   justify-content: space-between;
+  cursor: pointer;
   .imgContainer {
     flex: 1;
     width: 36px;
