--- a/src/component/Compounds/Navbar/Navbar.scss
+++ b/src/component/Compounds/Navbar/Navbar.scss
@@ -63,3 +63,22 @@
     }
   }
 }
+
+.messageCount {
+  position: absolute;
+  top: 20px;
+  right: 20%;
+  background-color: red;
+  font-size: 10px;
+  width: 15px;
+  height: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  padding-top: 1px;
+  color: #fff;
+  @include tablet2 {
+    right: 10%;
+  }
+}
