--- a/src/component/Compounds/Navbar/Navbar.scss
+++ b/src/component/Compounds/Navbar/Navbar.scss
@@ -12,8 +12,8 @@
   &::-webkit-scrollbar {
     width: 0 !important;
   }
-  -ms-overflow-style: none; /* for Internet Explorer, Edge */
-  scrollbar-width: none; /* for Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   @include phone {
     display: none;
   }
